# mlsamples

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md
cpp/include/mlsamples/: loader.h  pipeline.h
cpp/include/mlsamples/task/detection/: interface.h  yolo.h
cpp/include/mlsamples/task/pose/: interface.h  yolo.h
cpp/include/mlsamples/task/segmentation/: interface.h  seginterface.h  segyolo.h  yolo.h
cpp/src/: run.cpp
cpp/src/mlsamples/: loader.cpp  pipeline.cpp
cpp/src/mlsamples/engine/: engine.hpp
cpp/src/mlsamples/task/: detection.cpp  segmentation.cpp  yoloutils.cpp  yoloutils.h
cpp/src/mlsamples/visual/: drawer.cpp  drawer.h
python/: README.md  pyproject.toml  requirements.txt  run.py
python/samples/: taskrunner.py
python/samples/detection/: detect_interface.py  detectron.py  yolo.py
python/samples/segmentation/: detectron.py  segment_interface.py  yolo.py
python/src/mlsamples/: run.py
python/src/mlsamples/engine/: detection.py  engine_interface.py  enginebuilder.py  pose.py  segmentation.py
python/src/mlsamples/misc/: utils.py
python/src/mlsamples/pipeline/: builder.py
python/src/mlsamples/task/detection/: detect_interface.py  detectron.py  yolo.py
python/src/mlsamples/task/pose/: detectron.py  pose_interface.py  yolo.py
python/src/mlsamples/task/segmentation/: detectron.py  segment_interface.py  yolo.py
python/src/mlsamples/visual/: detection.py  pose.py  segmentation.py  visual_interface.py
