[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlsamples"
version = "0.0.1"
authors = [
    {name = "D-K-E", email = "22693287+D-K-E@users.noreply.github.com"},
]
description = "Sample Deep Learning Project"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["deep-learning", "transfer-learning", "computer-vision"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
